lib/tests/fixtures/compiler/evaluation/selector_in_type_spec.baseline
Error: selector_in_type_spec.pp:1:29: node 'test': selector expressions cannot be used in type specifications.
  type Invalid = Integer[true ? { default => false}]
                              ^~~~~~~~~~~~~~~~~~~~~
