lib/tests/fixtures/compiler/evaluation/selector_in_type_spec.pp
type Invalid = Integer[true ? { default => false}]
